sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:3: error: '=' expected but ';' found.
	var v;
             ^AlgInsertionSort:7: error: ')' expected but '}' found.
}
^