sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
public void insertionSort() {
	var v;
	for(i<-1 to getNombreValeurs(){
		v = i;
	}
}
